--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,24 @@
 
 <body>
     <h1>Judge-a-thon</h1>
+    <p>Vote for your fav OS</p>
+
+    <form id="judgeform">
+        <input type="radio" name="os" id="windows" value="Windows">
+        <label for="windows">Windows</label>
+        <br>
+        <input type="radio" name="os" id="mac" value="Mac">
+        <label for="mac">Mac</label>
+        <br>
+        <input type="radio" name="os" id="linux" value="Linux">
+        <label for="linux">Linus</label>
+        <br>
+        <input type="submit" value="Vote">
+    </form>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pusher/4.2.2/pusher.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
