setting up gulp process

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Judge-a-thon</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pusher/4.2.2/pusher.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
-    <script src="main.js"></script>
+    <script src="scripts/build/main.js"></script>
 </body>
 
 </html>
