Let's get this code working instead of...you know

--- a/public/judges.html
+++ b/public/judges.html
@@ -19,11 +19,11 @@
             <p>Login:</p>
             <div>
                 <label for="UserName">Username:</label>
-                <input type="text" id="Username" value="rick">
+                <input type="text" id="Username" value="">
             </div>
             <div>
                 <label for="Password">Password:</label>
-                <input type="text" id="Password" value="rick123">
+                <input type="text" id="Password" value="">
             </div>
             JudgeID:<span id=judgeid></span><br/>
             <button onclick="login()">Login</button>
